Revert "Merge pull request #1 from dbbudd/task/refactor"
This reverts commit 047571231efed5e92312bdb64ea8136e4cde252e, reversing
changes made to fe03a2f97c0ea6818a497a79d86fb937ec66b8d1.

--- a/Geometry.playgroundbook/Contents/Manifest.plist
+++ b/Geometry.playgroundbook/Contents/Manifest.plist
@@ -11,7 +11,7 @@
 	<key>Description</key>
 	<string>Start learning Geometry with Swift 3.0.</string>
 	<key>ContentIdentifier</key>
-	<string>com.danielbudd.Geometry</string>
+	<string>com.danielbudd.Blackjack</string>
 	<key>DeploymentTarget</key>
 	<string>ios10.0</string>
 	<key>ImageReference</key>
