Updated main manifest.plist with correct name.

--- a/Geometry.playgroundbook/Contents/Manifest.plist
+++ b/Geometry.playgroundbook/Contents/Manifest.plist
@@ -9,9 +9,9 @@
 	<key>Name</key>
 	<string>Geometry</string>
 	<key>Description</key>
-	<string>Start learning Geometry with Swift 3.0.</string>
+	<string>Geometry with Swift Playgrounds</string>
 	<key>ContentIdentifier</key>
-	<string>com.danielbudd.Blackjack</string>
+	<string>com.danielbudd.Geometry</string>
 	<key>DeploymentTarget</key>
 	<string>ios10.0</string>
 	<key>ImageReference</key>
